<resources>
    <string name="app_name">InfiniteScroling</string>
    <string name="str_loginLabel">¡Accede para ver qué hay de nuevo con tus amigos!</string>
    <string name="str_emailhint">Correo electrónico:</string>
    <string name="str_passwordHint">Contraseña</string>
    <string name="str_forgotPassword"> <u> ¿Olvidó la constraseña? </u> </string>
    <string name="str_login">Ingresar</string>
    <string name="str_register">Registrarse</string>
    <string name="str_registerIncomplete">Por favor, rellene todos los campos para poder registrarse</string>
    <string name="str_passwordConfirmFailed">Las contraseñas indicadas no coinciden. Por favor intente de nuevo</string>
    <string name="str_registrationFailed">No se ha podido registrar el usuario, intenta de nuevo mas tarde</string>
    <string name="str_unvalidDate">La fecha que se ha ingresado es invalida. Compruebe que tiene el formato dd/mm/aaaa</string>
    <string name="str_googleLogin"><u>Ingresar con google</u></string>
    <string name="str_createAccountText">¡Crea tu cuenta para siempre estar al tanto!</string>
    <string name="str_nameLbl">Nombre:</string>
    <string name="str_lastNamesLbl">Apellidos:</string>
    <string name="str_genderLbl">Género</string>
    <string name="str_birthDateLbl">Fecha de nacimiento:</string>
    <string name="str_cityLbl">Ciudad:</string>
    <string name="str_emailLbl">Correo electrónico</string>
    <string name="str_phoneLbl">Número de teléfono:</string>
    <string name="str_passwordLbl">Contraseña</string>
    <string name="str_repeatPasswordLbl">Repetir contraseña:</string>
    <string name="str_nameHint">Ingrese aquí su nombre</string>
    <string name="str_lastnamesHint">Ingrese aquí sus apellidos</string>
    <string-array name="strArr_genders">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string name="str_dateHint">DD/MM/AAAA</string>
    <string name="str_cityHint">Ciudad</string>
    <string name="str_phoneNumberHint">Número de teléfono</string>
    <string name="str_repeatPasswordHint">Repita la contraseña</string>
    <string name="str_registerDescription">Podés registrarte llenando el siguiente formulario o utilizando tu cuenta de Google. Para registrarte usando la cuenta de Google, vuelve a la pantalla anterior y presiona el boton \"Ingresar con Google\". \n\n¡Adelante, tus amigos te esperan!</string>
    <string name="str_editAccountText">Mantén tu cuenta al día</string>
    <string name="str_editAccountDescription">Acutalizá tu información de contacto o añadí información académica. Aquí podés actualizar tus datos.</string>
    <string name="str_editPasswordLbl">Cambiar contraseña:</string>
    <string name="str_editAccountSubmit">Actualizar cuenta</string>
    <string name="str_repeatEditPassword">Repetir nueva contraseña:</string>
    <string name="str_googleRegister">Registrarme con Google</string>
    <string name="what_are_you_thinking">What are you thinking?</string>
    <string name="ForgotPassTitle">Reestablecer contraseña</string>
    <string name="ForgotPassInstructions">Digite su correo electrónico para reestablecer la contraseña.</string>
    <string name="str_addAcademic">Añadir info académica</string>
    <string name="str_academicRecordsLbl">Logros académicos:</string>
    <string name="str_institutionLbl">Institución:</string>
    <string name="str_tituloLbl">Título:</string>
    <string name="str_startDateLbl">Inicio:</string>
    <string name="str_endDateLbl">Finaliza:</string>
    <string name="str_institutionHint">ej: Liceo del Carmen</string>
    <string name="str_titleHint">ej: Bahillerato</string>
    <string name="str_userName">Nombre usuario</string>
    <string name="str_commentText">Texto de ejemplo para comentario</string>
    <string name="str_buttonComment">Comentar</string>
    <string name="str_edtitTextCommentHint">Escribe un comentatio...</string>
    <string name="str_addFriend">Agregar</string>
    <string name="str_seeFriends">Ver amigos</string>
    <string name="str_seePhotos">Ver fotos</string>
    <string name="str_information">Información</string>
    <string name="str_friends">Amigos</string>
    <string name="str_buttonAllFriends">Todos</string>
    <string name="str_buttonCommonFriends">En común</string>
    <string name="str_buttonAcceptFriend">Aceptar</string>
    <string name="str_buttonRejectFriend">Rechazar</string>
    <string name="str_stateFriend">Estado de amistad</string>
    <string name="str_buttonMakePost">Crear publicación</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_editProfile">Actualizar perfil</string>
    <string name="str_warning">¡Cuidado!</string>
    <string name="str_deleteProfileDescription">Si se presiona el siguiente botón la cuenta va a borrarse y no podrás seguir usando nuestra aplicación con ella. No podrás revertir esta acción. \n\nSi usted se registró usando contraseña ingrésela para borrar la cuenta.</string>
    <string name="str_deleteAccount">Borrar cuenta</string>
    <string name="str_buscar">Buscar</string>
    <string name="str_optionsPosts">Posts</string>
    <string name="str_optionsUsers">Personas</string>
    <string name="str_postdescTest">Posts descriptions. \nTiene para multiline xdxdxd</string>
    <string name="str_updateProfilePicture">Actualizar foto de perfil</string>
    <string name="str_loginIncomplete">Por favor llenar todos los campos para acceder</string>
    <string name="str_loginFailed">Algo falló. Comprueba el correo y la contraseña e intenta de nuevo</string>
    <string name="str_actionlogout">Salir</string>
    <string name="str_logoutSuc">Se ha cerrado sesión con éxito</string>
    <string name="str_registrationSuccess">Se ha creado la cuenta con éxito</string>
    <string name="str_somethingWentWrong">Algo salió mal</string>
    <string name="alert_deleteAccount">¿Borrar cuenta?</string>
    <string name="alert_deleteAccountDes">¿Estás seguro de que quieres borrar la cuenta? Tus amigos te van a extrañar :\'(</string>
    <string name="alert_imSureConfirm">Sí, estoy seguro.</string>
    <string name="alert_backCancel">Mejor no. Volver.</string>
    <string name="str_regAcademicIncomplete">Rellene los cuatro espacios del logro academico para poder anadirlo</string>
    <string name="str_fetchAcademicFail">Hubo un problema al obtener la información académica</string>
    <string name="str_addAcademicSucces">Se ha añadido la información académica</string>
    <string name="str_cancel">Cancelar</string>
    <string name="str_editAcademicSuccess">Se ha editado la información académica</string>
    <string name="str_editAcademicFail">No se ha podido editar el academico. Intenta de neuvo más tarde.</string>
    <string name="str_addAcademicFail">No se ha podido añadir el logro académico. Por favor intenta de nuevo más tarde.</string>
    <string name="str_editAcademic">Editar info académica</string>
    <string name="str_deleteAcademicSucces">Se ha borrado el logro academico.</string>
    <string name="str_deleteAcademicFail">No se ha podido borrar el logro académico. Intenta de nuevo más tarde.</string>
    <string name="str_passwordIncomplete">Por favor. Ingrese la contraseña</string>
    <string name="str_editAccountIncomplete">No se puede dejar el nombre, apellido, o correo vacios</string>
    <string name="str_editLoginInfo">Cambiar información de acceso</string>
    <string name="str_editAccountSuccess">Se ha editado correctamente la informacion del usuario.</string>
    <string name="str_editAccountFail">No se pudo editar la información del usuario. Intenta de nuevo más tarde.</string>
    <string name="str_actualPasswordLbl">Contraseña actual:</string>
    <string name="alert_modifyLoginAccount">Modificar información de acceso.</string>
    <string name="alert_modifyLoginDes">Si aceptas a continuación, vas a tener que acceder nuevamente con la nueva información de acceso. ¿Estás seguro?</string>
    <string name="str_searchIncomplete">Por favor inserte algo para buscar.</string>
    <string name="str_noResults">No se han encontrado resultados</string>
    <string name="str_titleImages">Imagenes</string>
    <string name="str_unFriend">Eliminar amigo</string>
    <string name="str_newPost">Nuevo post</string>
    <string name="str_cancelFriendRequest">Cancelar solicitud</string>
    <string name="str_respondFriendRequest">Responder solicitud</string>
    <string name="alert_sure">¿Estás seguro?</string>
    <string name="alert_sendReqTitle">Enviar solicitud</string>
    <string name="alert_sendReqMessage">Si te aceptan la solicitud podrás ver los mensajes de este usuario en tu feed :D</string>
    <string name="alert_letsGoConfirm">¡Adelante!</string>
    <string name="alert_answerReqTitle">Responder la solicitud</string>
    <string name="alert_answerReqMessage">¡Este usuario quiere ser tu amigo! Si aceptas su solicitud podrás ver sus mensajes aparecer en tu feed :D ¿Quieres aceptar la solicitud de amistad?</string>
    <string name="alert_rejectFriendRequest">Rechazar</string>
    <string name="alert_waitCancel">Espera, volver</string>
    <string name="alert_requestCancel">Cancelar solicitud</string>
    <string name="alert_requestCancelMessage">¿Estas seguro que quieres cancelar la solicitud de amistad?</string>
    <string name="str_commonFriends">amigos en común</string>
</resources>
