<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_buscar"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/txtDataSearch"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true"
            android:text="Buscar"
            android:textSize="20sp"
            android:layout_alignTop="@+id/lblSearch"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="12dp"/>

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_black_24dp"
            android:layout_alignBottom="@+id/txtDataSearch"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="17dp"/>

        <Switch
            android:id="@+id/btnSwitchInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtDataSearch"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/lblPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_optionsPosts"
            android:textSize="19sp"
            android:layout_alignEnd="@id/btnSwitchInformation"
            android:layout_alignTop="@+id/btnSwitchInformation"
            android:layout_marginRight="50dp"/>

        <TextView
            android:id="@+id/lblUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_optionsUsers"
            android:textSize="19sp"
            android:layout_alignLeft="@+id/btnSwitchInformation"
            android:layout_alignTop="@+id/btnSwitchInformation"
            android:layout_marginLeft="50dp"/>

        <ListView
            android:id="@+id/lvData"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</FrameLayout>